--- a/css/styles.css
+++ b/css/styles.css
@@ -202,6 +202,16 @@ p {
   line-height: 2;
 }
 
-/* @media (max-width: 700) {
+@media (max-width: 500) {
+  .bugs-image {
+    float: right;
+    margin-right: 2rem;
+    width: 6rem;
+  }
 
-} ; */
+  .computer-image {
+    float: left;
+    margin-left: 2rem;
+    width: 10rem;
+  }
+} ;
