--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@
 
 .birds {
   position: absolute;
-  top: 30rem;
+  top: 20rem;
   right: 2rem;
   width: 15rem;
 }
@@ -49,7 +49,7 @@
 .bottom-cloud {
   position: absolute;
   left: 2rem;
-  bottom: 32rem;
+  bottom: 38rem;
 }
 
 .bottom-intro {
@@ -94,7 +94,8 @@
 
 .hill {
   position: relative;
-  width: 100rem;
+  width: 120rem;
+  margin-top: 10rem;
 }
 
 .hill2 {
@@ -236,7 +237,7 @@ p {
 }
 
 /* ////////////////////////////////// */
-/* Media Query */
+/* Media Query iPhone*/
 
 @media (max-width: 450px) {
   #angely-png {
@@ -385,4 +386,19 @@ p {
   hr {
     margin: 2rem auto;
   }
-} ;
+}
+
+@media (max-width: 1512px) {
+  .hill {
+    position: relative;
+    width: 94rem;
+  }
+}
+
+/* Media Query for Wide Screen */
+@media (min-width: 1921px) {
+  .hill {
+    position: relative;
+    width: 140rem;
+  }
+}
